# gin

./: .gitignore  Cargo.toml  README.md
migrations/: 20240315191423_init.down.sql  20240315191423_init.up.sql
src/: handler.rs  main.rs  model.rs  schema.rs
