[package]
name = "gin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
chrono = { version = "0.4.3", features = ["serde"] }
dotenvy = "0.15"
env_logger = "0.11"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.7", features = ["runtime-async-std-native-tls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
cargo-watch = "8.5"